# plug-compo

./: .gitignore  README.md  docker-compose.test.yml  first-prompt.md  fix-plan.md  implementation-plan.md
doc/: 01-AZR-blob-storage-connector.md  (+24 more)
ue-uw-backend/shared-python/ksquare-agent-orchestrator/: function_app.py  pyproject.toml  requirements.txt
ue-uw-backend/shared-python/ksquare-agent-orchestrator/ksquare/agent_orchestrator/: config.py  contracts.py  models.py  orchestrator.py
ue-uw-backend/shared-python/ksquare-agent-orchestrator/ksquare/agent_orchestrator/audit/: audit_db_context.py  conversation_audit_writer.py  pii_redactor.py
ue-uw-backend/shared-python/ksquare-agent-orchestrator/tests/: test_audit_writer.py  test_context_builder.py  test_online_scorer.py  test_orchestrator.py  test_safety_guard.py  test_tool_router.py
ue-uw-backend/shared-python/ksquare-agent-orchestrator/tests/synthesizers/: agent_synthesizer.py
ue-uw-backend/shared-python/ksquare-llm-observability/: alert-rules.yaml  function_app.py  pyproject.toml  requirements.txt
ue-uw-backend/shared-python/ksquare-llm-observability/ksquare/llm_observability/: __init__.py  config.py  contracts.py  models.py
ue-uw-backend/shared-python/ksquare-llm-observability/migrations/: 001_create_eval_tables.sql
ue-uw-backend/shared-python/ksquare-llm-observability/tests/: test_alert_rules_yaml.py  test_cost_tracker.py  test_dashboard_api.py  test_dataset_builder.py  test_ragas_pipeline.py
ue-uw-backend/shared-python/ksquare-llm-observability/tests/synthesizers/: eval_dataset_synthesizer.py
(+609 files in other folders)
