[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ksquare-llm-observability"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "httpx",
  "aiosqlite>=0.19.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "azure-monitor-opentelemetry>=1.0.0",
  "openai>=1.30.0",
  "langsmith>=0.1.0",
  "datasets>=2.0.0",
  "ragas>=0.1.0",
]

